PEPPER-1182 WIP